# rust-bitcoincore-rpc

client/src/: client.rs
integration_test/: Cargo.toml
json/: Cargo.toml
